Hopper > HTS + remove error labels

--- a/src/app/pages/guides/guides.component.html
+++ b/src/app/pages/guides/guides.component.html
@@ -1,7 +1,7 @@
 <div class="guides-page-container p-32" fxLayout="row wrap" fxLayoutAlign="start start">
 
     <h2 fxFlex="100">
-        Hopper Cloud Airlines Angular SDK offers a wide variety of UI components based on
+        HTS - Angular SDK offers a wide variety of UI components based on
         <a aria-describedby="Material design specification" href="https://material.io/components">the Material Design specification</a>
     </h2>
 
