pass logger properly

--- a/src/app/pages/guides/cfar-offer-banner/cfar-offer-banner.component.html
+++ b/src/app/pages/guides/cfar-offer-banner/cfar-offer-banner.component.html
@@ -10,7 +10,7 @@
         <mat-tab label="Overview">
             <div class="p-16">
                 <hopper-cfar-offer-banner
-                    [env]="env"
+                    env="development"
                     [isFakeBackend]="isFakeBackend"
                     [basePath]="basePath"
                     [imageBasePath]="imageBasePath"
