--- a/src/app/pages/guides/cfar-offer-banner-large/cfar-offer-banner-large.component.html
+++ b/src/app/pages/guides/cfar-offer-banner-large/cfar-offer-banner-large.component.html
@@ -9,7 +9,7 @@
         <mat-tab label="Overview">
             <div class="p-16">
                 <hopper-cfar-offer-banner-large
-                    env="development"
+                    [env]="env"
                     [isFakeBackend]="isFakeBackend"
                     [basePath]="basePath"
                     [imageBasePath]="imageBasePath"
